<?xml version="1.0"?>
<package format="2">
  <name>ir_kobuki</name>
  <version>0.1.0</version>
  <description>The Intelligent Robotics kobuki package</description>

  <maintainer email="fmrico@gmail.com">fmrico</maintainer>

  <license>Apache 2</license>

  <author email="fmrico@gmail.com">Francisco Martín</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>kobuki_gazebo</exec_depend>
  <exec_depend>kobuki_keyop</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>worlds</exec_depend>

  <export>

  </export>
</package>